fix(WU-A1): 变更模型拆分——FieldChange→ValueChange + 新增 ObjectFieldChange
A1 修复（D5-D9/D12）：
- 扁平层 FieldChange → ValueChange（业务值语义，下游强转安全）；
  新增 ObjectFieldChange（携带 ValueNode oldNode/newNode，诚实承载跨类型变化）
- 树层新增 ObjectFieldChangeNode；ItemAdded/ItemRemoved 载荷 Object → ValueNode（收窄）
- diffNode dispatch 表全量重写（D8）：跨类型 10 组合 → ObjectFieldChangeNode；
  P↔P/P↔N/N↔P → FieldChangeNode（业务值）；O↔O/C↔C 递归
- ChangeSet 三套转换各加 ObjectFieldChange 分支（leaf 语义，双视图一致）
- T1 重写：泄漏断言 → 新类型断言；补 4 个零覆盖方向（C↔N/N↔C/O↔C/C↔P）
- 155 测试全绿（131 core + 24 api）；issue 009 已建档（消费方 A8 同步）